--- a/index.html
+++ b/index.html
@@ -5,5 +5,13 @@
 	</head>
 	<body>
 		<p>Hola Yo</p>
+		<table class="miTabla">
+			<thead>
+				<th>Holo Iop</th>
+			</thead>
+			<tbody>
+				<td>hi there!!!</td>
+			</tbody>
+		</table>
 	</body>
 </html>
